# keiba

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  env.example  memory.md
py64_analysis/: README.md  alembic.ini  pyproject.toml
py64_analysis/alembic/: env.py  script.py.mako
py64_analysis/scripts/: README_exotics_validation.md  _cli_args.py  analyze_asof_lag_slippage.py  analyze_common_removed_bands.py  analyze_cross_year_regime_segments.py  analyze_ev_overlay_tail.py  analyze_q95_odds_band_contrib.py  analyze_race_prob_mass.py  analyze_rolling_bets.py  analyze_takeout_overround_buckets.py  analyze_training_coverage.py  audit_market_blend_replay_vs_engine.py  audit_market_prob_norm.py  audit_odds_dyn_ev_margin_coverage.py  audit_odds_floor_parity.py  audit_pace_history_usage.py  audit_stake_odds_damp_noop.py  audit_stake_odds_damp_replay_vs_engine.py  audit_takeout_ev_margin_noop.py  backfill_all_years.sh  backfill_metrics_json.py  backfill_pace_from_jsonl.py  backfill_pace_from_jvd.py  check_backfill_progress.py  check_features_progress.py  check_system_status.py  compare_metrics_json.py  compare_rolling_runs.py  decide_takeoutq_q95_q97.py  dedupe_features.py  diagnose_profit_concentration.py  diagnose_roi_monotonicity_ev_odds.py  diagnose_slippage_variant.py  diagnose_step14_sign_mismatch.py  diagnose_takeout_ev_margin_binding.py  export_fullfield_preds_for_run_dir.py  extract_metrics_json.py  generate_due_race_ids.py  inspect_fact_race_surface.py  load_exotics_snapshots_dir.py  (+51 more)
py64_analysis/tests/: __init__.py  conftest.py  (+22 more)
(+410 files in other folders)
